--- a/styles.css
+++ b/styles.css
@@ -53,8 +53,16 @@ header {
 .logo {
     font-size: 24px;
     font-weight: 700;
-    color: white;
+    display: flex;
+    align-items: center;
     text-decoration: none;
+    color: white;
+}
+
+.logo-image {
+    width: 40px;
+    height: auto;
+    margin-right: 10px;
 }
 
 .logo span {
